some small updates

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,8 +60,8 @@ layout: default
         {% endif %}
     </footer>
 
-    {% include share.html %}
+    {% comment %}{% include share.html %}{% endcomment %}
 
-    {% include disqus.html %}
+    {% comment %}{% include disqus.html %}{% endcomment %}
 
 </div>
